fix: MA-47-too much space in movie content when scorelist not present

--- a/src/utils/movie_content.scss
+++ b/src/utils/movie_content.scss
@@ -152,7 +152,7 @@ $highlight-color: red;
       width: 100%;
       height: 90%;
       grid-template-rows: 100px 30px 60px minmax(250px, 300px);
-      grid-auto-rows: 1fr;
+      grid-auto-rows: auto;
       &__mainPoster {
         display: none;
       }
@@ -177,7 +177,8 @@ $highlight-color: red;
     &_background {
     }
     &_container {
-      grid-template-rows: auto 23px 60px minmax(250px, 300px) 100px;
+      grid-template-rows: auto 23px 60px minmax(250px, 300px);
+      grid-auto-rows: auto;
       grid-template-columns: 250px 1fr;
       grid-gap: 20px;
       &__mainPoster {
@@ -212,7 +213,8 @@ $highlight-color: red;
     &_background {
     }
     &_container {
-      grid-template-rows: auto 20px 60px minmax(250px, 300px) 120px;
+      grid-template-rows: auto 20px 60px minmax(250px, 300px) ;
+      grid-auto-rows: auto;
       grid-template-columns: 300px 1fr;
       grid-gap: 20px;
       &__mainPoster {
@@ -246,7 +248,8 @@ $highlight-color: red;
     &_background {
     }
     &_container {
-      grid-template-rows: 100px 20px 60px minmax(250px, 300px) 120px;
+      grid-template-rows: 100px 20px 60px minmax(250px, 300px);
+      grid-auto-rows: auto;
       grid-template-columns: 300px 1fr;
       grid-gap: 20px;
       &__mainPoster {
